iwyu_failed_h.log
❌ IWYU error in ./src/include/workers/timers.h
In file included from ./src/include/workers/timers.h:9:
./src/include/workers/workers.h:219:5: error: label at end of compound statement is a C23 extension [-Werror,-Wc23-extensions]
  219 |     }
      |     ^
./src/include/workers/workers.h:248:5: error: label at end of compound statement is a C23 extension [-Werror,-Wc23-extensions]
  248 |     }
      |     ^
./src/include/workers/workers.h:274:5: error: label at end of compound statement is a C23 extension [-Werror,-Wc23-extensions]
  274 |     }
      |     ^
./src/include/workers/workers.h:323:5: error: label at end of compound statement is a C23 extension [-Werror,-Wc23-extensions]
  323 |     }
      |     ^

src/include/workers/timers.h should add these lines:
#include <stdio.h>               // for printf

src/include/workers/timers.h should remove these lines:

The full include-list for src/include/workers/timers.h:
#include <inttypes.h>            // for uint8_t, uint64_t, uint16_t
#include <stddef.h>              // for NULL
#include <stdio.h>               // for printf
#include <unistd.h>              // for read
#include "constants.h"           // for MAX_RETRY_CNT, MAX_CONNECTION_PER_CO...
#include "log.h"                 // for LOG_DEVEL_DEBUG
#include "orilink.h"             // for create_orilink_raw_protocol_packet
#include "orilink/heartbeat.h"   // for orilink_prepare_cmd_heartbeat
#include "orilink/protocol.h"    // for CLOSE_ORILINK_PROTOCOL, ORILINK_HEAR...
#include "stdbool.h"             // for false, true
#include "types.h"               // for SUCCESS, FAILURE, worker_type_t, COW
#include "utilities.h"           // for update_timer_oneshot, decrement_ctr
#include "workers/polling.h"     // for create_polling_1ms
#include "workers/worker_ipc.h"  // for retry_control_packet, worker_master_...
#include "workers/workers.h"     // for cow_c_session_t, sio_c_session_t
---

